--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Hug Day, Omi Bro!</title>
+    <title>can you open this, Omi Bro!</title>
     <style>
         /* CSS Variables for easy theming */
         :root {
@@ -217,3 +217,4 @@
 </body>
 
 </html>
+
